--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </ul>
       <hr size:"3" noshades>
       <ul>
-        <li><h4><a href="bio.htlm"><strong>Bio</strong></a></h4></li>
+        <li><h4><a href="CV/bio.htlm"><strong>Bio</strong></a></h4></li>
       </ul>
       <hr size:"3" noshades>
     </td>
