--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <li><h3><a href="contact_details.html"><strong>Contact Details
             </strong></a></h3></li>
       </ul>
-      <hr size:"3" noshades>
       <ul>
-        <li><h4><a href="bio.html"><strong>Bio</strong></a></h4></li>
+        <li><h4><a href="Bio.html"><strong>Bio
+        </strong></a></h4></li>
       </ul>
       <hr size:"3" noshades>
     </td>
